--- a/ui/profile.html
+++ b/ui/profile.html
@@ -23,13 +23,16 @@
                 This button <button id="counter">Click Me</button> has been clicked <span id="count">_</span> times 
                 since the server was recently started.
                 <hr/>
-				<input id="nameInput" type="text" placeholder="enter name">
-                <input id="nameBtn" type="submit" value="Submit">
-				<button id="showNames">Show Names</button>
+				<input id="nameInput" type="text" placeholder="add a name">
+                <input id="nameBtn" type="submit" value="Add a Name">
+				<button id="showNames">Show All Names</button>
 				<ul id="nameList" style="text-align:left"></ul>
+				<hr/>
 				<ul id="namesShown" style="text-align:right;list-style:none;"></ul>
-				<p>Names entered so far:</p>
-				<div id="allTheNamesStore"></div>
+				<div style="display:none">
+					<p>Names entered so far:</p>
+					<div id="allTheNamesStore"></div>
+				</div>
             </div>
         </div>
         <script type="text/javascript" src="/scripts/profile.js"></script>
