--- a/ui/profile.html
+++ b/ui/profile.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>The Profile Page</title>
+        <title>The Profile Page fresh run</title>
         <link href="/styles/style.css" rel="stylesheet" />
     </head>
     <body onload="initPage()">
