--- a/ui/profile.html
+++ b/ui/profile.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>The Profile Page fresh run</title>
+        <title>The Profile Page</title>
         <link href="/styles/style.css" rel="stylesheet" />
     </head>
     <body onload="initPage()">
@@ -10,7 +10,7 @@
             <hr/>
         </div>
 	    <div class="center container">
-	        <h1 class="center text-big bold"> The Profile Page </h1>
+	        <h1 class="center text-big bold"> The Profile Page - v1.0</h1>
     	    <hr/>
             <img class="img-medium" src="/images/chaplin.png">
             <h3>Personal</h3>
