[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -28,7 +28,9 @@
 				<button id="showNames">Show All Names</button>
 				<ul id="nameList" style="text-align:left"></ul>
 				<hr/>
-				<div id="namesShownDiv"><ul id="namesShown" style="text-align:right;list-style:none;"></ul></div>
+				<div id="namesShownDiv">
+				    <ul id="namesShown" style="text-align:right;list-style:none;"></ul>
+				</div>
 				<div style="display:none">
 					<p>Names entered so far:</p>
 					<div id="allTheNamesStore"></div>
