--- a/ui/profile.html
+++ b/ui/profile.html
@@ -10,7 +10,7 @@
             <hr/>
         </div>
 	    <div class="center container">
-	        <h1 class="center text-big bold"> The Profile Page - v1.0.1</h1>
+	        <h1 class="center text-big bold"> The Profile Page - v1.0.2</h1>
     	    <hr/>
             <img class="img-medium" src="/images/chaplin.png">
             <h3>Personal</h3>
@@ -28,9 +28,8 @@
 				<button id="showNames">Show All Names</button>
 				<ul id="nameList" style="text-align:left"></ul>
 				<hr/>
-				<div id="namesShownDiv">
-				    <ul id="namesShown" style="text-align:right;list-style:none;"></ul>
-				</div>
+				<div id="namesShownDiv"></div>
+				<ul id="namesShown" style="text-align:right;list-style:none;"></ul>
 				<div style="display:none">
 					<p>Names entered so far:</p>
 					<div id="allTheNamesStore"></div>
