[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -10,7 +10,7 @@
             <hr/>
         </div>
 	    <div class="center container">
-	        <h1 class="center text-big bold"> The Profile Page - v1.0.3</h1>
+	        <h1 class="center text-big bold"> The Profile Page - v1.0.4</h1>
     	    <hr/>
             <img class="img-medium" src="/images/chaplin.png">
             <h3>Personal</h3>
@@ -26,6 +26,7 @@
 				<input id="nameInput" type="text" placeholder="add a name">
                 <input id="nameBtn" type="submit" value="Add a Name">
 				<button id="showNames">Show All Names</button>
+				<p>Names entered since this page was refreshed:</p>
 				<ul id="nameList" style="text-align:left"></ul>
 				<hr/>
 				<div id="namesShownDiv"></div>
