[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -26,7 +26,7 @@
 				<input id="nameInput" type="text" placeholder="add a name">
                 <input id="nameBtn" type="submit" value="Add a Name">
 				<button id="showNames">Show All Names</button>
-				<p>Names entered since this page was refreshed:</p>
+				<p><strong>Names entered since this page was refreshed:</strong></p>
 				<ul id="nameList" style="text-align:left"></ul>
 				<hr/>
 				<div id="namesShownDiv"></div>
